# soccer-tracker-DE-project

./: .gitignore  LICENSE  README.md  api_test.py  match_data_parquet_497490 (1).parquet  match_data_parquet_497520.parquet  mypy.ini  pyproject.toml  raw_json_helper.py  requirements.txt  soccer-tracker.excalidraw
.github/workflows/: README.md  cd.yml  ci.yml  ci_tf.yml
Airflow/: Dockerfile  README.md  download_dags.py  start_airflow.sh
Airflow(deprecated)/: README.md
Airflow(deprecated)/dags/: fetch_football_data_dag.py
Airflow/dags/: airflow_monitoring.py  fetch_football_data_dag.py  fetch_league_data_dag.py
Airflow/utils/: api_helpers.py  bigquery_helpers.py  data_processing.py
cloud_functions/: README.md  fetch_football_data.py
cloud_functions/convert_match_data_function/: main.py
cloud_functions/convert_standings_data_function/: main.py
cloud_functions/convert_standings_to_parquet/: main.py
cloud_functions/convert_weather_data_function/: main.py
cloud_functions/convert_weather_data_function copy/: main.py
dags/: fetch_football_data_dag.py
fetch_league_data_function/: main.py
fetch_match_data_function/: main.py  requirements.txt
fetch_weather_function/: main.py
process_match_data_function/: main.py  requirements.txt
sample_data/: match.json  match_data_parquet_497490 (2).parquet  standings_data_parquet_2024-12-18_2021.parquet  standings_sample.json  weather.json  weather_data_parquet_498741 (2).parquet
schemas/: leagues.json  matches_processed.json  reddit_processed.json  standings_processed.json  teams.json  weather_processed.json
scripts/: deploy_function.sh
soccer_tracker_ui/: .firebaserc  .gitignore  apphosting.yaml  package-lock.json  package.json  tailwind.config.ts
src/: main.py  requirements.txt
terraform/: README.md  backend.hcl  cloud_functions.tf  main.tf  pubsub.tf  variables.tf
tests/: README.md  test_convert_match_data_function.py  test_convert_reddit_data_function.py  test_convert_standings_data_function.py  test_convert_weather_data_function.py  test_fetch_league_data_function.py  test_fetch_match_data_function.py  test_fetch_reddit_data_function.py  test_fetch_standings_data_function.py  test_fetch_weather_data_function.py  test_match_to_bigquery_function.py  test_process_reddit_data_function.py  test_reddit_to_bigquery_function.py  test_standings_to_bigquery_function.py  test_sync_firestore_function.py  test_sync_standings_firestore_function.py  test_sync_summaries_firestore_function.py  test_upcoming_firestore_function.py  test_weather_to_bigquery_function.py
utils/: api_helpers.py
(+153 files in other folders)
