[project]
name = "soccer-tracker-de-project"
version = "0.1.0"
description = "Soccer tracker data engineering project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cloud_functions"]
