[project]
name = "soccer-tracker-de-project"
version = "1.0.0"
description = "Soccer tracker data engineering project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "polars>=1.17.1",
    "requests>=2.32.3",
    "pytest-asyncio>=0.25.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-pubsub>=2.27.1",
    "google-cloud-firestore>=2.20.0",
    "rapidfuzz>=3.11.0",
    "praw>= 7.8.1",
    "bandit>=1.8.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cloud_functions"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.pytest]
pythonpath = "."
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
exclude = "Airflow/"
disable_error_code = [
    "attr-defined",
    "call-overload",
    "call-arg",
    "import-untyped",
]
follow_imports = "skip"
warn_return_any = false
warn_unused_configs = false

[tool.bandit]
exclude_dirs = [
    ".git",
    "venv",
    ".env",
    "__pycache__",
    "tests",
    "Airflow",
    "Terraform",
]
skips = ["B101", "B104"]
targets = ["."]
recursive = true
confidence_level = "HIGH"
